--- a/TMR.html
+++ b/TMR.html
@@ -409,15 +409,103 @@
                 pointer-events: none;
             }
 
+            /* TODO MODAL Styling (match desktop panel) */
             .todo-modal {
-                background: none;
+                background: white;
                 border: none;
                 box-shadow: none;
                 height: 100%;
                 overflow: hidden;
                 flex: 1;
+                display: flex;
+                flex-direction: column;
+                border-radius: 0;
+                margin: 0;
             }
 
+            .todo-modal h3 {
+                margin: 0;
+                padding: 16px;
+                font-size: 18px;
+                font-weight: 600;
+                background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
+                color: white;
+                flex-shrink: 0;
+            }
+
+            .todo-modal .todo-input-row {
+                padding: 16px;
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+                background: white;
+                flex-shrink: 0;
+                border-bottom: 1px solid #eee;
+            }
+
+            .todo-modal input[type="text"],
+            .todo-modal input[type="number"] {
+                flex: 1;
+                min-width: 80px;
+                padding: 10px 12px;
+                border: 2px solid #e0e0e0;
+                border-radius: 6px;
+                font-size: 14px;
+                transition: border-color 0.2s ease;
+            }
+
+            .todo-modal input:focus {
+                outline: none;
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 0 0 3px rgba(0,137,241,0.15);
+            }
+
+            .todo-modal .todo-list {
+                flex: 1;
+                overflow-y: auto;
+                list-style: none;
+                padding: 0 16px 16px 16px;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .todo-modal .todo-item {
+                background: linear-gradient(135deg, #f8f9fa, #f0f3f7);
+                border: 1px solid #e0e8f0;
+                padding: 12px;
+                border-radius: 8px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                transition: all 0.2s ease;
+            }
+
+            .todo-modal .todo-item:hover {
+                background: linear-gradient(135deg, #f0f3f7, #e8ecf2);
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 2px 8px rgba(0,137,241,0.1);
+            }
+
+            .todo-modal .small-tmr-btn {
+                background: #d7dbdf !important;
+                border: none !important;
+                color: #333 !important;
+                padding: 8px 14px !important;
+                border-radius: 8px !important;
+                box-shadow: none !important;
+                transition: background 0.15s ease !important;
+                transform: none !important;
+            }
+
+            .todo-modal .small-tmr-btn:hover {
+                background: var(--accent-color, #0089f1) !important;
+                transform: none !important;
+                box-shadow: none !important;
+            }
+
+            /* MEIBOT MODAL Styling (match desktop panel) */
             .meibot-modal-content {
                 height: 100%;
                 max-height: none;
@@ -425,19 +513,27 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
+                background: white;
+                overflow: hidden;
             }
 
             .meibot-header {
+                margin: 0;
                 padding: 16px;
-                border-bottom: 2px solid #ddd;
+                font-size: 18px;
+                font-weight: 600;
+                background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
+                color: white;
+                flex-shrink: 0;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                flex-shrink: 0;
+                border-bottom: none;
             }
 
             .meibot-header h2 {
                 margin: 0;
+                font-size: 18px;
             }
 
             .meibot-close {
@@ -446,20 +542,24 @@
                 font-size: 24px;
                 cursor: pointer;
                 padding: 0;
-                color: #333;
+                color: white;
             }
 
             .meibot-chat {
                 flex: 1;
                 overflow-y: auto;
                 padding: 16px;
-                background: #f9f9f9;
+                background: white;
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
             }
 
             .meibot-typing {
                 padding: 10px;
                 text-align: center;
                 flex-shrink: 0;
+                background: #f9f9f9;
             }
 
             #meibot-modal-form {
@@ -469,21 +569,39 @@
                 gap: 8px;
                 flex-wrap: wrap;
                 flex-shrink: 0;
+                background: white;
             }
 
             #meibot-modal-input {
                 flex: 1;
                 min-width: 150px;
                 padding: 10px 12px;
-                border: 1px solid #ddd;
+                border: 2px solid #e0e0e0;
                 border-radius: 6px;
                 font-size: 14px;
+                transition: border-color 0.2s ease;
             }
 
             #meibot-modal-input:focus {
                 outline: none;
                 border-color: var(--accent-color, #0089f1);
-                box-shadow: 0 0 4px rgba(0,137,241,0.3);
+                box-shadow: 0 0 0 3px rgba(0,137,241,0.15);
+            }
+
+            #meibot-modal-form .small-tmr-btn {
+                background: var(--accent-color, #0089f1) !important;
+                color: white !important;
+                border: none !important;
+                padding: 10px 16px !important;
+                border-radius: 6px !important;
+                cursor: pointer !important;
+                font-size: 14px !important;
+                font-weight: 500 !important;
+                transition: background 0.15s ease !important;
+            }
+
+            #meibot-modal-form .small-tmr-btn:hover {
+                background: var(--accent-hover, #0073d1) !important;
             }
 
             /* Hide persistent panels */
@@ -499,6 +617,8 @@
                 flex-direction: column;
                 height: 100vh;
                 overflow: hidden;
+                margin: 0;
+                padding: 0;
             }
 
             .calendar-page {
@@ -507,6 +627,7 @@
                 width: 100%;
                 height: 100%;
                 position: relative;
+                overflow: hidden;
             }
 
             /* Hide desktop panels on mobile */
@@ -531,11 +652,13 @@
                 height: 45px;
                 gap: 2px;
                 padding: 0;
+                margin: 0;
                 border-bottom: 2px solid #999;
                 background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: flex-end;
                 order: -1;
+                width: 100%;
             }
 
             .calendar-buttons button {
@@ -642,15 +765,103 @@
                 pointer-events: none;
             }
 
+            /* TODO MODAL Styling (match desktop panel) */
             .todo-modal {
-                background: none;
+                background: white;
                 border: none;
                 box-shadow: none;
                 height: 100%;
                 overflow: hidden;
                 flex: 1;
+                display: flex;
+                flex-direction: column;
+                border-radius: 0;
+                margin: 0;
             }
 
+            .todo-modal h3 {
+                margin: 0;
+                padding: 16px;
+                font-size: 18px;
+                font-weight: 600;
+                background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
+                color: white;
+                flex-shrink: 0;
+            }
+
+            .todo-modal .todo-input-row {
+                padding: 16px;
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+                background: white;
+                flex-shrink: 0;
+                border-bottom: 1px solid #eee;
+            }
+
+            .todo-modal input[type="text"],
+            .todo-modal input[type="number"] {
+                flex: 1;
+                min-width: 80px;
+                padding: 10px 12px;
+                border: 2px solid #e0e0e0;
+                border-radius: 6px;
+                font-size: 14px;
+                transition: border-color 0.2s ease;
+            }
+
+            .todo-modal input:focus {
+                outline: none;
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 0 0 3px rgba(0,137,241,0.15);
+            }
+
+            .todo-modal .todo-list {
+                flex: 1;
+                overflow-y: auto;
+                list-style: none;
+                padding: 0 16px 16px 16px;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .todo-modal .todo-item {
+                background: linear-gradient(135deg, #f8f9fa, #f0f3f7);
+                border: 1px solid #e0e8f0;
+                padding: 12px;
+                border-radius: 8px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                transition: all 0.2s ease;
+            }
+
+            .todo-modal .todo-item:hover {
+                background: linear-gradient(135deg, #f0f3f7, #e8ecf2);
+                border-color: var(--accent-color, #0089f1);
+                box-shadow: 0 2px 8px rgba(0,137,241,0.1);
+            }
+
+            .todo-modal .small-tmr-btn {
+                background: #d7dbdf !important;
+                border: none !important;
+                color: #333 !important;
+                padding: 8px 14px !important;
+                border-radius: 8px !important;
+                box-shadow: none !important;
+                transition: background 0.15s ease !important;
+                transform: none !important;
+            }
+
+            .todo-modal .small-tmr-btn:hover {
+                background: var(--accent-color, #0089f1) !important;
+                transform: none !important;
+                box-shadow: none !important;
+            }
+
+            /* MEIBOT MODAL Styling (match desktop panel) */
             .meibot-modal-content {
                 height: 100%;
                 max-height: none;
@@ -658,19 +869,27 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
+                background: white;
+                overflow: hidden;
             }
 
             .meibot-header {
+                margin: 0;
                 padding: 16px;
-                border-bottom: 2px solid #ddd;
+                font-size: 18px;
+                font-weight: 600;
+                background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
+                color: white;
+                flex-shrink: 0;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                flex-shrink: 0;
+                border-bottom: none;
             }
 
             .meibot-header h2 {
                 margin: 0;
+                font-size: 18px;
             }
 
             .meibot-close {
@@ -679,20 +898,24 @@
                 font-size: 24px;
                 cursor: pointer;
                 padding: 0;
-                color: #333;
+                color: white;
             }
 
             .meibot-chat {
                 flex: 1;
                 overflow-y: auto;
                 padding: 16px;
-                background: #f9f9f9;
+                background: white;
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
             }
 
             .meibot-typing {
                 padding: 10px;
                 text-align: center;
                 flex-shrink: 0;
+                background: #f9f9f9;
             }
 
             #meibot-modal-form {
@@ -702,21 +925,39 @@
                 gap: 8px;
                 flex-wrap: wrap;
                 flex-shrink: 0;
+                background: white;
             }
 
             #meibot-modal-input {
                 flex: 1;
                 min-width: 150px;
                 padding: 10px 12px;
-                border: 1px solid #ddd;
+                border: 2px solid #e0e0e0;
                 border-radius: 6px;
                 font-size: 14px;
+                transition: border-color 0.2s ease;
             }
 
             #meibot-modal-input:focus {
                 outline: none;
                 border-color: var(--accent-color, #0089f1);
-                box-shadow: 0 0 4px rgba(0,137,241,0.3);
+                box-shadow: 0 0 0 3px rgba(0,137,241,0.15);
+            }
+
+            #meibot-modal-form .small-tmr-btn {
+                background: var(--accent-color, #0089f1) !important;
+                color: white !important;
+                border: none !important;
+                padding: 10px 16px !important;
+                border-radius: 6px !important;
+                cursor: pointer !important;
+                font-size: 14px !important;
+                font-weight: 500 !important;
+                transition: background 0.15s ease !important;
+            }
+
+            #meibot-modal-form .small-tmr-btn:hover {
+                background: var(--accent-hover, #0073d1) !important;
             }
 
             /* Hide persistent panels */
