--- a/TMR.html
+++ b/TMR.html
@@ -305,11 +305,13 @@
                 height: 45px;
                 gap: 2px;
                 padding: 0;
+                margin: 0;
                 border-bottom: 2px solid #999;
                 background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: flex-end;
                 order: -1;
+                width: 100%;
             }
 
             .calendar-buttons button {
