--- a/TMR.html
+++ b/TMR.html
@@ -550,11 +550,13 @@
             .meibot-chat {
                 flex: 1;
                 overflow-y: auto;
+                overflow-x: hidden;
                 padding: 16px;
                 background: white;
                 display: flex;
                 flex-direction: column;
                 gap: 12px;
+                -webkit-overflow-scrolling: touch;
             }
 
             .meibot-typing {
@@ -572,6 +574,11 @@
                 flex-wrap: wrap;
                 flex-shrink: 0;
                 background: white;
+                position: sticky;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 100;
             }
 
             #meibot-modal-input {
@@ -906,11 +913,13 @@
             .meibot-chat {
                 flex: 1;
                 overflow-y: auto;
+                overflow-x: hidden;
                 padding: 16px;
                 background: white;
                 display: flex;
                 flex-direction: column;
                 gap: 12px;
+                -webkit-overflow-scrolling: touch;
             }
 
             .meibot-typing {
@@ -928,6 +937,11 @@
                 flex-wrap: wrap;
                 flex-shrink: 0;
                 background: white;
+                position: sticky;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 100;
             }
 
             #meibot-modal-input {
