Fix: Remove redirect from tutorial and reposition modals to top with padding
- Remove tutorial redirect that was causing page to disappear after 2 seconds
- Change modals from top: 45px to top: 0 with padding-top: 45px to fill viewport properly
- Modals now start at top of container and reserve space for tab bar
- Fixes issue where modals were positioned too low on mobile screen

--- a/intro.html
+++ b/intro.html
@@ -121,24 +121,20 @@
             const startBtn = document.getElementById('start-tmr-btn');
             const skipBtn = document.getElementById('skip-tutorial-btn');
 
-            // Check if user has already seen tutorial
-            const hasSeen = localStorage.getItem('tmr_tutorial_seen');
-            if (hasSeen) {
-                // Redirect to main calendar page immediately
-                window.location.href = 'TMR.html';
-                return;
+            // Mark tutorial as seen when user clicks start
+            if (startBtn) {
+                startBtn.addEventListener('click', () => {
+                    localStorage.setItem('tmr_tutorial_seen', '1');
+                    window.location.href = 'TMR.html';
+                });
             }
 
-            // Mark tutorial as seen when user clicks start
-            startBtn.addEventListener('click', () => {
-                localStorage.setItem('tmr_tutorial_seen', '1');
-                window.location.href = 'TMR.html';
-            });
-
-            skipBtn.addEventListener('click', () => {
-                localStorage.setItem('tmr_tutorial_seen', '1');
-                window.location.href = 'TMR.html';
-            });
+            if (skipBtn) {
+                skipBtn.addEventListener('click', () => {
+                    localStorage.setItem('tmr_tutorial_seen', '1');
+                    window.location.href = 'TMR.html';
+                });
+            }
         })();
     </script>
 
