CRITICAL FIX: Make desktop media query landscape-only
Changed desktop media query from:
  @media (min-width: 1025px)
to:
  @media (min-width: 1025px) and (orientation: landscape)

THE ROOT CAUSE: If your device is wide (even in portrait), the desktop
@media (min-width: 1025px) would match and take precedence over the
@media (orientation: portrait) rule. By adding (orientation: landscape)
to the desktop query, we ensure portrait orientation ALWAYS uses mobile
layout regardless of device width.

This is the actual fix - portrait will now definitely use the mobile
tab interface with modals positioned at top: 0.

--- a/TMR.html
+++ b/TMR.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="backgrounds.css?v=20251208a">
     <link rel="stylesheet" href="calendar-mobile.css?v=20251208b">
     <style>
-        /* ===== NEW: Desktop Layout (1025px+) ===== */
-        @media (min-width: 1025px) {
+        /* ===== NEW: Desktop Layout (1025px+ landscape ONLY) ===== */
+        @media (min-width: 1025px) and (orientation: landscape) {
             body {
                 display: flex;
                 flex-direction: column;
