--- a/TMR.html
+++ b/TMR.html
@@ -293,12 +293,14 @@
                 min-width: 0;
             }
 
-            /* Buttons on RIGHT side in landscape */
+            /* Buttons on RIGHT side in landscape - FIXED POSITION */
             .calendar-buttons {
-                display: flex;
-                flex-direction: column;
-                height: 100%;
+                position: fixed !important;
+                top: 75px !important;
+                right: 0 !important;
+                bottom: 0 !important;
                 width: 45px;
+                height: 100%;
                 gap: 0;
                 padding: 0;
                 margin: 0;
@@ -306,7 +308,8 @@
                 background: linear-gradient(to right, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: stretch;
-                order: 2;
+                display: flex;
+                flex-direction: column;
                 z-index: 200;
             }
 
@@ -340,37 +343,44 @@
                 border-left: none;
             }
 
-            /* Calendar takes left side */
+            /* Calendar and modals positioned left of button bar */
+            .calendar-section,
+            #todo-modal-backdrop,
+            #meibot-modal {
+                position: fixed !important;
+                top: 75px !important;
+                left: 0 !important;
+                bottom: 0 !important;
+                right: 45px !important;
+                width: calc(100% - 45px);
+                height: 100%;
+                overflow: hidden;
+            }
+
+            /* Calendar section visibility */
             .calendar-section {
-                flex: 1;
-                overflow-y: auto;
-                overflow-x: hidden;
-                order: 1;
                 opacity: 0 !important;
                 pointer-events: none !important;
                 transition: opacity 0.3s ease;
-                position: relative;
+                display: flex;
+                flex-direction: column;
+                z-index: 50;
             }
 
             .calendar-section.active {
                 opacity: 1 !important;
                 pointer-events: auto !important;
-                display: flex;
-                flex-direction: column;
             }
 
             /* Modals overlay on calendar space */
             #todo-modal-backdrop {
-                position: absolute !important;
-                inset: 0 !important;
                 background: none !important;
-                overflow: hidden;
                 opacity: 0 !important;
                 pointer-events: none !important;
-                transition: opacity 0.3s ease !important;
+                transition: opacity 0.3s ease;
                 display: flex !important;
                 flex-direction: column !important;
-                z-index: 100 !important;
+                z-index: 100;
             }
 
             #todo-modal-backdrop.active {
@@ -379,16 +389,14 @@
             }
 
             #meibot-modal {
-                position: absolute !important;
-                inset: 0 !important;
                 background: none !important;
                 overflow: hidden !important;
                 flex-direction: column !important;
                 opacity: 0 !important;
                 pointer-events: none !important;
-                transition: opacity 0.3s ease !important;
+                transition: opacity 0.3s ease;
                 display: flex !important;
-                z-index: 100 !important;
+                z-index: 100;
             }
 
             #meibot-modal.active {
@@ -530,7 +538,6 @@
             }
         }
 
-        /* ===== Mobile Portrait (ANY portrait orientation) ===== */
         @media (orientation: portrait) {
             body {
                 display: flex;
@@ -564,10 +571,12 @@
                 min-width: 0;
             }
 
-            /* Buttons on TOP in portrait (like tabs) */
+            /* Buttons on TOP in portrait (like tabs) - FIXED POSITION */
             .calendar-buttons {
-                display: flex;
-                flex-direction: row;
+                position: fixed !important;
+                top: 75px !important;
+                left: 0 !important;
+                right: 0 !important;
                 height: 45px;
                 width: 100%;
                 gap: 0;
@@ -577,7 +586,8 @@
                 background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
                 flex-shrink: 0;
                 align-items: flex-end;
-                order: -1;
+                display: flex;
+                flex-direction: row;
                 z-index: 200;
             }
 
@@ -610,37 +620,43 @@
                 bottom: 0;
             }
 
-            /* Calendar section */
+            /* Calendar and modals positioned below the button bar */
+            .calendar-section,
+            #todo-modal-backdrop,
+            #meibot-modal {
+                position: fixed !important;
+                top: 120px !important;
+                left: 0 !important;
+                right: 0 !important;
+                bottom: 0 !important;
+                width: 100%;
+                overflow: hidden;
+            }
+
+            /* Calendar section visibility */
             .calendar-section {
-                flex: 1;
-                overflow-y: auto;
-                overflow-x: hidden;
-                order: 0;
                 opacity: 0 !important;
                 pointer-events: none !important;
                 transition: opacity 0.3s ease;
-                position: relative;
+                display: flex;
+                flex-direction: column;
+                z-index: 50;
             }
 
             .calendar-section.active {
                 opacity: 1 !important;
                 pointer-events: auto !important;
-                display: flex;
-                flex-direction: column;
             }
 
             /* Modals overlay on calendar space */
             #todo-modal-backdrop {
-                position: absolute !important;
-                inset: 0 !important;
                 background: none !important;
-                overflow: hidden;
-                opacity: 0;
-                pointer-events: none;
+                opacity: 0 !important;
+                pointer-events: none !important;
                 transition: opacity 0.3s ease;
                 display: flex !important;
                 flex-direction: column !important;
-                z-index: 100 !important;
+                z-index: 100;
             }
 
             #todo-modal-backdrop.active {
@@ -649,16 +665,14 @@
             }
 
             #meibot-modal {
-                position: absolute !important;
-                inset: 0 !important;
                 background: none !important;
                 overflow: hidden !important;
                 flex-direction: column !important;
                 opacity: 0 !important;
                 pointer-events: none !important;
-                transition: opacity 0.3s ease !important;
+                transition: opacity 0.3s ease;
                 display: flex !important;
-                z-index: 100 !important;
+                z-index: 100;
             }
 
             #meibot-modal.active {
