--- a/TMR.html
+++ b/TMR.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="backgrounds.css?v=20251208a">
     <link rel="stylesheet" href="calendar-mobile.css?v=20251208b">
     <style>
-        /* ===== NEW: Desktop Layout (1025px+ landscape ONLY) ===== */
-        @media (min-width: 1025px) and (orientation: landscape) {
+        @media (min-width: 1025px) {
             body {
                 display: flex;
                 flex-direction: column;
