--- a/TMR.html
+++ b/TMR.html
@@ -259,7 +259,7 @@
         }
 
         /* ===== Mobile Landscape (ANY landscape orientation) ===== */
-        @media (orientation: landscape) {
+        @media (max-width: 1024px) and (orientation: landscape) {
             body {
                 display: flex;
                 flex-direction: row;
@@ -318,7 +318,7 @@
                 width: 37px;
                 padding: 0;
                 border: none !important;
-                border-radius: 12px 0 0 12px;
+                border-radius: 12px;
                 background: var(--accent-color, #0089f1) !important;
                 color: white !important;
                 font-size: 9px;
@@ -360,10 +360,10 @@
                 position: fixed !important;
                 top: 75px !important;
                 left: 8px !important;
-                bottom: 8px !important;
+                bottom: 13px !important;
                 right: 58px !important;
                 width: calc(100% - 66px);
-                height: calc(100% - 83px);
+                height: calc(100% - 88px);
                 overflow: hidden;
                 border-radius: 12px 0 0 12px;
             }
@@ -374,10 +374,10 @@
                 position: fixed !important;
                 top: 75px !important;
                 left: 8px !important;
-                bottom: 8px !important;
+                bottom: 13px !important;
                 right: 58px !important;
                 width: calc(100% - 66px);
-                height: calc(100% - 83px);
+                height: calc(100% - 88px);
                 overflow: hidden;
                 border-radius: 0 !important;
             }
@@ -431,13 +431,13 @@
 
             /* TODO MODAL - full screen in landscape */
             .todo-modal {
-                background: color-mix(in srgb, var(--accent-color, #0089f1) 10%, white);
+                background: white;
                 border: none;
                 box-shadow: none;
-                height: 100%;
+                height: auto;
+                max-height: calc(100vh - 150px);
                 width: 100%;
-                overflow: hidden;
-                flex: 1;
+                overflow-y: auto;
                 display: flex;
                 flex-direction: column;
                 border-radius: 0 !important;
@@ -475,7 +475,7 @@
             }
 
             .todo-modal .todo-list {
-                flex: 1;
+                max-height: 70vh;
                 overflow-y: auto;
                 list-style: none;
                 padding: 0 12px 12px 12px;
@@ -516,13 +516,13 @@
                 flex-direction: column;
                 background: white;
                 overflow: hidden;
-                border-radius: 0;
+                border-radius: 12px;
                 margin: 0;
             }
 
             .meibot-header {
                 margin: 0;
-                padding: 12px 16px;
+                padding: 8px 16px;
                 font-size: 16px;
                 font-weight: 600;
                 background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
@@ -563,7 +563,7 @@
             }
         }
 
-        @media (orientation: portrait) {
+        @media (max-width: 1024px) and (orientation: portrait) {
             body {
                 display: flex;
                 flex-direction: column;
@@ -622,7 +622,7 @@
                 height: 50px;
                 padding: 0;
                 border: none !important;
-                border-radius: 12px 12px 0 0;
+                border-radius: 12px;
                 background: var(--accent-color, #0089f1) !important;
                 color: white !important;
                 font-size: 10px;
@@ -663,7 +663,7 @@
             /* Calendar section with rounded bottom */
             .calendar-section {
                 position: fixed !important;
-                top: 125px !important;
+                top: 130px !important;
                 left: 8px !important;
                 right: 8px !important;
                 bottom: 0 !important;
@@ -676,13 +676,13 @@
             #todo-modal-backdrop,
             #meibot-modal {
                 position: fixed !important;
-                top: 125px !important;
+                top: 130px !important;
                 left: 8px !important;
                 right: 8px !important;
-                bottom: 0 !important;
                 width: calc(100% - 16px);
                 overflow: hidden;
                 border-radius: 0 !important;
+                height: auto;
             }
 
             /* Calendar section visibility */
@@ -734,13 +734,13 @@
 
             /* TODO MODAL - full screen in portrait */
             .todo-modal {
-                background: color-mix(in srgb, var(--accent-color, #0089f1) 10%, white);
+                background: white;
                 border: none;
                 box-shadow: none;
-                height: 100%;
+                height: auto;
+                max-height: calc(100vh - 200px);
                 width: 100%;
-                overflow: hidden;
-                flex: 1;
+                overflow-y: auto;
                 display: flex;
                 flex-direction: column;
                 border-radius: 0 !important;
@@ -778,7 +778,7 @@
             }
 
             .todo-modal .todo-list {
-                flex: 1;
+                max-height: 70vh;
                 overflow-y: auto;
                 list-style: none;
                 padding: 0 12px 12px 12px;
@@ -817,13 +817,13 @@
                 flex-direction: column;
                 background: white;
                 overflow: hidden;
-                border-radius: 0;
+                border-radius: 12px;
                 margin: 0;
             }
 
             .meibot-header {
                 margin: 0;
-                padding: 12px 16px;
+                padding: 8px 16px;
                 font-size: 16px;
                 font-weight: 600;
                 background: linear-gradient(135deg, var(--accent-color, #0089f1), var(--accent-hover, #0073d1));
