Final upd's and fixes for G- integration

--- a/TMR.html
+++ b/TMR.html
@@ -1028,9 +1028,8 @@
                     <button id="mobile-prev-month" class="mobile-nav-btn">&lt;</button>
                     <div class="month-year"></div>
                     <button id="mobile-next-month" class="mobile-nav-btn">&gt;</button>
-                    <button id="mobile-export-btn" class="mobile-nav-btn">Export</button>
-                    <button id="mobile-import-btn" class="mobile-nav-btn">Import</button>
-                    <input id="mobile-import-file" type="file" accept=".json" style="display:none">
+                    <button id="mobile-gcal-auth-btn" class="mobile-nav-btn" title="Connect to Google Calendar">🔗</button>
+                    <button id="mobile-gcal-sync-btn" class="mobile-nav-btn" style="display:none;" title="Sync with Google Calendar">🔄</button>
                 </div>
 
                 <div class="mobile-calendar-grid-container">
