Calendar animation and OAuth Logout fixed

--- a/TMR.html
+++ b/TMR.html
@@ -1016,6 +1016,7 @@
                         <input id="import-file" type="file" accept=".json" style="display:none">
                         <button id="gcal-auth-btn" class="nav-btn tmr-btn small-tmr-btn" title="Connect to Google Calendar">🔗 Google Calendar</button>
                         <button id="gcal-sync-btn" class="nav-btn tmr-btn small-tmr-btn" style="display:none;" title="Sync with Google Calendar">🔄 Sync</button>
+                        <button id="gcal-logout-btn" class="nav-btn tmr-btn small-tmr-btn" style="display:none;" title="Disconnect Google Calendar">⛔ Disconnect</button>
                     </div>
                 </div>
                 <div id="weekday-row" class="weekday-row" aria-hidden="false"></div>
@@ -1030,6 +1031,7 @@
                     <button id="mobile-next-month" class="mobile-nav-btn">&gt;</button>
                     <button id="mobile-gcal-auth-btn" class="mobile-nav-btn" title="Connect to Google Calendar">🔗</button>
                     <button id="mobile-gcal-sync-btn" class="mobile-nav-btn" style="display:none;" title="Sync with Google Calendar">🔄</button>
+                    <button id="mobile-gcal-logout-btn" class="mobile-nav-btn" style="display:none;" title="Disconnect Google Calendar">⛔</button>
                 </div>
 
                 <div class="mobile-calendar-grid-container">
